force-app/main/default/objects/PDLM__Grid_View__c/PDLM__Grid_View__c.object-meta.xml
<CustomObject>
    <label>Grid View</label>
    <nameField>
        <label>Grid View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grid Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>