force-app/main/default/objects/PDLM__Grid_View__c/fields/PDLM__Filters__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Filters__c</fullName>
    <label>Filters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>