force-app/main/default/objects/PDLM__Grid_View__c/fields/PDLM__Is_Shared__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Is_Shared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Shared</label>
    <type>Checkbox</type>
</CustomField>