force-app/main/default/objects/PDLM__Grid_View__c/fields/PDLM__PQL__c.field-meta.xml
<CustomField>
    <fullName>PDLM__PQL__c</fullName>
    <label>PQL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>